force-app/main/default/objects/RecordTypeMapping__c/RecordTypeMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RecordTypeMapping</label>
</CustomObject>