force-app/main/default/objects/RecordTypeMapping__c/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <description>The name of a CountryCode picklist value.</description>
    <inlineHelpText>The name of a CountryCode picklist value.</inlineHelpText>
    <label>CountryCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>