force-app/main/default/objects/RecordTypeMapping__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>The name of a picklist value in the Lead Industry picklist.</description>
    <inlineHelpText>The name of a picklist value in the Lead Industry picklist.</inlineHelpText>
    <label>Industry</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>